# wod

./: .example-env  .gitignore  Dockerfile  README.md  Taskfile.yml  pyproject.toml  req.http
.github/workflows/: main.yml
.kustomize/: api-deployment.yaml  api-service.yaml  kustomization.yml  ns.yaml  rbac.yaml  worker-deployment.yaml
charts/wod/: Chart.yaml  values.yaml
charts/wod/charts/.common/: values.yaml
charts/wod/charts/.common/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
charts/wod/templates/: NOTES.txt
src/api/: kubernetes.py  main.py
src/worker/: main.py
